--- a/src/app/components/nav.module.scss
+++ b/src/app/components/nav.module.scss
@@ -58,7 +58,7 @@ $color: #5c8fbf;
   }
 }
 .nav__register {
-  padding: 0.5rem;
+  padding: 0.5rem 1.5rem;
   border-radius: 0.5rem;
   background-color: $color;
   cursor: pointer;
