--- a/src/app/components/nav.module.scss
+++ b/src/app/components/nav.module.scss
@@ -86,7 +86,7 @@ $color: #5c8fbf;
   height: 25px;
   display: none;
   margin: 0 0 0.5rem 0;
-  fill: black;
+  fill: white;
   @media (max-width: $mobile) {
     display: block;
   }
