--- a/src/app/account/account.module.scss
+++ b/src/app/account/account.module.scss
@@ -8,11 +8,14 @@ $boxShadowColor: rgb(202, 202, 202);
   bottom: 0;
   width: 15%;
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
   flex-direction: column;
-  align-items: center;
+  // align-items: center;
+  padding: 3rem 2rem;
   .sidebar__title {
-    margin: 3rem 0 0 0;
+    text-align: center;
+    margin-bottom: 2rem;
+
     .sidebar__logo {
       width: 40px;
       height: 40px;
@@ -30,13 +33,12 @@ $boxShadowColor: rgb(202, 202, 202);
     margin: 0 0 8rem 0;
   }
   .sidebar__footer {
-    margin: 0 0 1rem 0;
     color: white;
     text-align: left;
     .sidebar__email {
       display: block;
-      font-size: 0.8rem;
-      margin: 0.5rem 0 0 1rem;
+      font-size: 1rem;
+      margin: 2rem 0 0 0;
     }
   }
 }
