--- a/src/app/home.module.scss
+++ b/src/app/home.module.scss
@@ -10,28 +10,33 @@ $mobile: global.$mobile;
 
 .home__main {
   display: flex;
-  padding: 5rem;
+  padding: 10rem 5rem;
   align-items: center;
   justify-content: center;
   margin: 3% 0 0 0;
   width: 100%;
-  //   background-image: url('https://img.freepik.com/free-photo/abstract-refreshing-blue-tropical-watercolor-background-illustration-high-resolution-free-image_1340-20384.jpg?w=1380&t=st=1690391302~exp=1690391902~hmac=9cfa0ecb376676fdaedc7b9af5bb76d5e339f431568739fca10c0ce618d5419f');
-  background-position: center;
+  background-image: url('/home-background.png');
   background-repeat: no-repeat;
-  background-size: cover;
+  background-position: center left 80%;
+
   @media (max-width: $mobile) {
     flex-wrap: wrap;
-    padding: 2rem;
+    padding: 6rem 2rem;
     margin: 10% 0 0 0;
+    background-image: none;
   }
 }
 .home__main__left {
-  width: 30%;
-  margin: 8% 3rem 10rem 3rem;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin: 8% 20rem 10rem 3rem;
+
   @media (max-width: $mobile) {
-    width: 100%;
+    width: fit-content;
     margin: 8% 0rem 2rem 0rem;
   }
+
   .home__left__register {
     padding: 0.5rem 1.5rem;
     border: $color solid 1px;
@@ -70,15 +75,21 @@ $mobile: global.$mobile;
 }
 .home__main__right {
   width: 40%;
-  margin: 8% 3rem 10rem 3rem;
+  margin: 2rem 3rem 10rem 3rem;
   text-align: center;
   @media (max-width: $mobile) {
     width: 100%;
     margin: 8% 0rem 10rem 0rem;
   }
-  .home__main__right__video {
-    width: 75%;
-    border-radius: 0.5rem;
+  // .home__main__right__video {
+  //   width: 75%;
+  //   border-radius: 0.5rem;
+  //   @media (max-width: $mobile) {
+  //     width: 90%;
+  //   }
+  // }
+  .home__main__right__image {
+    width: 100%;
     @media (max-width: $mobile) {
       width: 90%;
     }
@@ -160,10 +171,13 @@ $mobile: global.$mobile;
         text-align: center;
       }
       .home__work__section__icon {
+        width: 56px;
+        height: 56px;
         border-radius: 0.5rem;
-        -webkit-box-shadow: 0px 0px 17px -10px rgba(179, 179, 179, 1);
-        -moz-box-shadow: 0px 0px 17px -10px rgba(179, 179, 179, 1);
-        box-shadow: 0px 0px 17px -5px rgba(179, 179, 179, 1);
+        background-color: white;
+        -webkit-box-shadow: 0px 0px 17px -10px white;
+        -moz-box-shadow: 0px 0px 17px -10px white;
+        box-shadow: 0px 0px 17px -3px white;
         margin: 1rem 0;
       }
       .home__work__section__icons__container__up {
