Add select exeperts list

--- a/src/app/account/docs/[id]/[user_id]/docs.module.scss
+++ b/src/app/account/docs/[id]/[user_id]/docs.module.scss
@@ -91,6 +91,9 @@ $boxShadowColor: rgb(207, 207, 207);
       font-size: 1rem;
       font-weight: bold;
     }
+    .doc__suggestions__select {
+      margin-bottom: 2rem;
+    }
     .doc__suggestions__btn {
       display: inline-flex;
       align-items: center;
